@@ -62,6 +62,26 @@
 
 
 --
+-- Files with a build rule go into a custom build section.
+--
+
+	function suite.itemGroup_onBuildRule()
+		files { "hello.c", "hello.h", "hello.rc", "hello.cg" }
+		configuration "**.cg"
+			buildrule {
+				commands = { "cgc $(InputFile)" },
+				outputs = { "$(InputName).obj" }
+			}
+		prepare("CustomBuild")
+		test.capture [[
+	<ItemGroup>
+		<CustomBuild Include="hello.cg" />
+	</ItemGroup>
+		]]
+	end
+
+
+--
 -- Files located at the root (in the same folder as the project) do not
 -- need a filter identifier.
 --
